--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -106,7 +106,7 @@
                 </div>
                 <div class="content">
                     <h3>Goa Package</h3>
-                    <p>The most popular beach of Goa, Baga is located close to Calangute beach, around 30 Km North of Panaji. Baga is popular for its nightlife with some very famous clubs such as Brittos, Titos and Mambos.There is also a range of water sports that you can try your hands at.</p>
+                    <p>The most popular beach of Goa, Baga is located close to Calangute beach, around 30 Km North of Panaji. Baga is popular for its nightlife with some very famous clubs such as Brittos, Titos and Mambos.There is also a range of water sports that you can try your hands at. let's come to Goa.... </p>
                     <div class="price">Rs 7,999 - Rs 12,999</div>
                     <a href="#contact" class="btn">explore now</a>
                 </div>
